styles.css
*{
   box-sizing: border-box;
}

html, body {
    overflow-x: hidden;
}

:root {
    --blue: rgb(44, 161, 204);
    --grey: rgb(68, 72, 81);
    --lightGrey: rgb(128, 128, 128);
    --navSwidth: 45px;
}

body {
    margin: 0;
    font-family: "Mulish", Arial, sans-serif;
    background-color: var(--lightGrey);
}

header {
    position: absolute;
    z-index: 3;
    width: 100vw;
    color: white;
}

h1 {
    margin: 0;
}

.switch input {
    opacity: 0;
    width: 0;
    height: 0;
}

.slider {
    position: relative;
    display: inline-block;
    width: 32px;
    height:18px;
    margin-right: 5px;
    background-color: #ccc;
    border-radius: 34px;
    cursor: pointer;
    transition: background-color 0.3s ease-in-out;
}

.slider::before {
    content: "";
    position: absolute;
    width: 13px;
    height: 13px;
    background-color: white;
    border-radius: 50%;
    left: 3px;
    bottom: 3px;
    transition: transform 0.3s ease-in-out;
}

input:checked + .slider {
    background-color: #2196F3;
}

input:checked + .slider::before {
    transform: translateX(14px);
}

#count {
    background-color: white;
    color: black;
    position: absolute;
    right: 5px;
    top: 0;
    margin: 0;
    height: fit-content;
    border-radius: 15px;
    padding: 2px;
}

#angle {
    position: absolute;
    width: 200%;
    max-width: 200vw;
    height: 25vh;
    top: -15%;
    left: -50%;
    transform: rotate(-5deg);
    background-color: var(--lightGrey);
    z-index: 0;
    box-shadow: 0px 0px 40px 5px rgb(0,0,0);
    pointer-events: none;
}

#content {
    background-color: var(--grey);
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    grid-template-columns: repeat(auto-fit,minmax(300px, 1fr));
    grid-gap: 1rem;
    padding-top: 120px;
}

figure {
    background-color: rgba(0, 0, 0, 0);
    color: white;
}

figure img {
    width: 100%;
    min-height: 100px;
    height: auto;
}

p {
    margin: 0;
}

.row {
    display: flex;
    flex-direction: row;
}

.hide {
    display: none;
}

